# calling-c-sharp-actions-from-rust

./: .gitignore  LICENSE  README.md
.github/workflows/: dotnet.yml
c-sharp/: CSharpBin.sln
c-sharp/CSharpBin/: CSharpBin.csproj  NativeMethods.cs  Program.cs
rust-lib/: Cargo.toml  build.rs
rust-lib/src/: c_sharp.rs  lib.rs
